--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -402,6 +402,17 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Armáda Zlatých Draků (Bašta):}\n"
+"\\begin{itemize}\n"
+"  \\item \\textbf{Army:}\n"
+"    \\begin{itemize}\n"
+"      \\item Tlupa Zlatých Draků\n"
+"      \\item Tlupa Jednorožců\n"
+"      \\item Tlupa Stromvojáků\n"
+"      \\item Tlupa Kentaurů\n"
+"    \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:82
@@ -429,6 +440,27 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Ivor (Bašta):}\n"
+"\\begin{itemize}\n"
+"  \\item \\textbf{Armáda:}\n"
+"    \\begin{itemize}\n"
+"      \\item A Hrstka Elfů\n"
+"      \\item Neutrální Armáda na stejné Úrovni jako váš Hrdina\\footnote{Viz ``Tabulka Obtížností'' na straně 35 Knihy Základních Pravidel.}\n"
+"    \\end{itemize}\n"
+"  \\item \\textbf{Balíček AI:}\n"
+"    \\begin{itemize}\n"
+"      \\item 1 × Karta Moc \\svg{might}\n"
+"      \\item 2 × Karta Magie \\svg{magic}\n"
+"      \\item 1 × Karta Schopnost \\svg{skill}\n"
+"    \\end{itemize}\n"
+"  \\item \\textbf{Kouzla:}\n"
+"    \\begin{itemize}\n"
+"      \\item 1 × Přesnost\\footnote{Vyhodnoťte při prvním útoku Jednotky s útokem na dálku \\svg{unit_ranged}.}\n"
+"      \\item 1 × Magický Šíp\n"
+"    \\end{itemize}\n"
+"  \\item \\textbf{Dovednosti:} Lučišnictví (pouze Základní efekt)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:86
@@ -558,13 +590,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:131
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{13} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item At the end of the Round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "You lose if any of the following occur:\n"
 "\\begin{itemize}\n"
@@ -573,38 +599,29 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{13. Kolo:}\n"
+"Scénář prohrajete stane-li se libovolné z následujícího:\n"
 "\\begin{itemize}\n"
-"  \\item Na konci Kola, pokud nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
+"  \\item You Prohrajete Souboj při setkání.\n"
+"  \\item Neporazíte Nepřátelského Hrdinu a Armádu Zlatých Draků do konce 13. Kola.\n"
 "\\end{itemize}\n"
-"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:135
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[overlay]\n"
-#| "  \\centering\n"
-#| "  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+#, no-wrap
 msgid ""
 "\\begin{tikzpicture}[overlay]\n"
 "  \\node at (3.5, -2)[opacity=0.2] {\\includegraphics[width=0.45\\linewidth]{\\art/fire_magic.png}};\n"
 "\\end{tikzpicture}\n"
 "\n"
 msgstr ""
-"[overlay]\n"
-"  \\centering\n"
-"  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+"\\begin{tikzpicture}[overlay]\n"
+"  \\node at (3.5, -2)[opacity=0.2] {\\includegraphics[width=0.45\\linewidth]{\\art/fire_magic.png}};\n"
+"\\end{tikzpicture}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:145
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the Timed Events of Round 6.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{1} Round:}\n"
 "\\begin{itemize}\n"
@@ -612,21 +629,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. Kolo:}\n"
+"\\textbf{1. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 6. Kola.\n"
+"  \\item Přečtěte si sekci \\uv{Úvod}.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:150
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the Timed Events of Round 6.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{2} Round:}\n"
 "\\begin{itemize}\n"
@@ -634,22 +645,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. Kolo:}\n"
+"\\textbf{2. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 6. Kola.\n"
+"  \\item Přečtěte si sekci \\uv{Královna}.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:156
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item The Few Elves of Ivor's Army are Reinforced to a Pack of Elves.\n"
-#| "    Ivor's Army also gains an Ammo Cart.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{9} Round:}\n"
 "\\begin{itemize}\n"
@@ -660,20 +664,14 @@ msgid ""
 msgstr ""
 "\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Hrstka Elfů z Ivorovy Armády je Posíleno na Tlupu Elfů.\n"
-"    Ivorova Armáda také získává Vozík s Municí.\n"
+"  \\item Hrstka Elfů z Ivorovy Armády je Posílena na Tlupu Elfů.\n"
+"  \\item Ivorova Armáda získává Vozík s Municí.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:161
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the Timed Events of Round 6.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{10} Round:}\n"
 "\\begin{itemize}\n"
@@ -681,21 +679,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. Kolo:}\n"
+"\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 6. Kola.\n"
+"  \\item Přidejte Střílny do Ivorovy Armády.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:166
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{13} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item At the end of the Round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{13} Round:}\n"
 "\\begin{itemize}\n"
@@ -705,7 +697,7 @@ msgid ""
 msgstr ""
 "\\textbf{13. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Na konci Kola, pokud nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
+"  \\item Pokud na konci Kola nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -752,7 +744,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"    \\item Váš Hrdina nezískává Zkušenosti po úrovni 5.\n"
+"    \\item Váš Hrdina nezískává Zkušenosti po 5. Úrovni \n"
 "    \\item Nepřátelský Hrdina se nepohybuje a čeká pouze ve svém Městě. Začíná se Hradbami a Bránou na jejich straně Desky Bojiště.\n"
 "    \\item Na Dílek Mapy N7 nelze vstoupit, dokud není Ivor poražen.\n"
 "    \\item Na lokaci Dračí Utopie bojuje váš Hrdina s Armádou Zlatých Draků.\n"
@@ -763,19 +755,7 @@ msgstr ""
 
 #. type: tikzpicture
 #: campaigns/inferno_devilish_plan.tex:200
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[remember picture, overlay]\n"
-#| "  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-#| "    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-#| "  };\n"
-#| "  \\node(map)[anchor=center] at (current page.center) {\n"
-#| "    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-#| "  };\n"
-#| "  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-#| "  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-#| "  \\node at (4.8, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno}}}}};\n"
-#| "  \\node at (4.8, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Map Tiles}}}}};"
+#, no-wrap
 msgid ""
 "[remember picture]\n"
 "    \\node(map)[anchor=center] at (9, -5.5) {\n"
@@ -788,121 +768,84 @@ msgid ""
 "  "
 msgstr ""
 "[remember picture, overlay]\n"
-"  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
-"    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
-"  };\n"
-"  \\node(map)[anchor=center] at (current page.center) {\n"
-"    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
-"  };\n"
-"  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
-"  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
-"  \\node at (4.3, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};"
+"[remember picture]\n"
+"    \\node(map)[anchor=center] at (9, -5.5) {\n"
+"      \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
+"    };\n"
+"  \\node at (2.0, 0.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
+"  \\node at (13.0, -0.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
+"  \\node at (5.0, -11.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
+"  \\node at (5.0, -11.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};  "
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:206
 #: campaigns/inferno_steadwicks_fall.tex:213
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{The Story}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Armáda Bosse}}\n"
+"\\subsection*{\\MakeUppercase{Příběh}}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:210
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[overlay]\n"
-#| "  \\centering\n"
-#| "  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+#, no-wrap
 msgid ""
 "\\begin{tikzpicture}[overlay]\n"
 "  \\node at (14.4, 1.45) {\\includegraphics[width=0.85\\linewidth]{\\art/efreet.jpg}};\n"
 "\\end{tikzpicture}\n"
 "\n"
 msgstr ""
-"[overlay]\n"
-"  \\centering\n"
-"  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
+"\\begin{tikzpicture}[overlay]\n"
+"  \\node at (14.4, 1.45) {\\includegraphics[width=0.85\\linewidth]{\\art/efreet.jpg}};\n"
+"\\end{tikzpicture}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:212
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Author:} Tm335\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Introduction}\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} Tm335\n"
+"\\textbf{Úvod}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:216
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{1} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Read: ``Our underlings have done well. They have managed to raise a volcano\n"
-#| "    and erect a fort in a sparsely populated forest just outside of Erathia's border.\n"
-#| "    While the Dungeon Overlords make their way underground toward the Erathian capitol,\n"
-#| "    you must strike at their allies, the elves of AvLee.''\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Our underlings have done well.\n"
 "They have managed to raise a volcano and erect a fort in a sparsely populated forest just outside of Erathia's border.\n"
 "While the Dungeon Overlords make their way underground toward the Erathian capitol, you must strike at their allies, the elves of AvLee.\n"
 "\n"
 msgstr ""
-"\\textbf{1. Kolo:}\n"
-"\\begin{itemize}\n"
-"  \\item Čtěte: \\uv{Naši podřízení si vedli dobře. Podařilo se jim vztyčit sopku\n"
-"    a postavit pevnost v řídce osídleném lese těsně za hranicemi Erathie.\n"
-"    Zatímco Pánové Kobek se podzemím blíží k erathijskému hlavnímu městu,\n"
-"    musíte udeřit na jejich spojence, elfy z AvLee.}\n"
-"\\end{itemize}\n"
+"Naši podřízení si vedli dobře.\n"
+"Podařilo se jim vztyčit sopku a postavit pevnost v řídce osídleném lese těsně za hranicemi Erathie.\n"
+"Zatímco Pánové Kobek se podzemím blíží k erathijskému hlavnímu městu, musíte udeřit na jejich spojence, elfy z AvLee.\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:218
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Enemy Armies:}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{The Queen}\n"
 "\n"
 msgstr ""
-"\\textbf{Nepřátelské Armády:}\n"
+"\\textbf{Královna}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:222
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{2} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Read: ``The Gold Dragon Queen is a powerful ally of AvLee.\n"
-#| "    You must find her lair and see to her demise, as this will greatly weaken\n"
-#| "    the elves and make them less of a threat to our plans to destroy Erathia.\n"
-#| "    Go now, and make us proud!''\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "The Gold Dragon Queen is a powerful ally of AvLee.\n"
 "You must find her lair and see to her demise, as this will greatly weaken the elves and make them less of a threat to our plans to destroy Erathia.\n"
 "Go now, and make us proud!\n"
 "\n"
 msgstr ""
-"\\textbf{2. Kolo:}\n"
-"\\begin{itemize}\n"
-"  \\item Čtěte: \\uv{Královna Zlatých Draků je mocnou spojenkyní AvLee.\n"
-"    Musíte najít její doupě a zajistit její zánik, protože to výrazně oslabí\n"
-"    elfy a učiní je menší hrozbou pro naše plány na zničení Erathie.\n"
-"    Jděte hned a udělejte nám radost!}\n"
-"\\end{itemize}\n"
+"Královna Zlatých Draků je mocnou spojenkyní AvLee.\n"
+"Musíte najít její doupě a zajistit její zánik, protože to výrazně oslabí elfy a učiní je menší hrozbou pro naše plány na zničení Erathie.\n"
+"Okamžitě vyražte a skliďte naši pýchu!\n"
 "\n"
