--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -45,12 +45,9 @@ The game ends when one player has defeated each other players' Main Hero once \t
 The player with the most Victory Points (VP) wins (see Tournament Book). Players gain:
 
 \begin{itemize}
-  \item 1 VP for losing a Combat against another player
-  \item 1 VP for each Starting Town captured - \textit{once per captured Faction}
-  \item 1 VP for the Grail Token
   \item 2 VP for winning a Level VII Neutral Combat
-  \item 1 VP for every controlled Mine or Settlement on Near and Center Tiles
-  \item Removed Artifacts count towards VPs
+  \item 1 VP for losing a Combat against another player
+  \item 1 VP for the Grail Token
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -59,37 +56,29 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 \begin{itemize}
   \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
-\textbf{\nth{2} Round:}
+\textbf{End of \nth{2} Round:}
 \begin{itemize}
-  \item Each player may gain one reward from the Field that the closest player to them visits this Round.
+  \item Each player may resolve all the Fields that the player closest to them visited this Round.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
+  \item Remove all Black Cubes from the map except from Learning Stones.
 \end{itemize}
 \textbf{\nth{6} Round:}
 \begin{itemize}
-  \item Secondary Heroes gain +1 \svgeven{movement}.
+  \item Each player may remove up to 3 Black Cubes from the map.
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item Each player may remove up to 5 Black Cubes from the map.
+  \item All players may recruit a Secondary Hero for free.
 \end{itemize}
 \textbf{\nth{9} Round:}
 \begin{itemize}
-  \item Player(s) whose Main Hero has the least \svg{experience} roll 2 \svg{resource}.
-\end{itemize}
-\textbf{\nth{10} Round:}
-\begin{itemize}
-  \item All players may recruit a Secondary Hero for free.
+  \item Repeat event of Round 4.
 \end{itemize}
 \textbf{\nth{11} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
-\end{itemize}
-\textbf{\nth{12} Round:}
-\begin{itemize}
-  \item Each player may recruit one \silver\ Neutral Unit from the closest player's Faction for half its recruitment cost.
+  \item Each player may recruit one Neutral \silver\ Unit of the closest player's Faction for half its recruitment cost.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -97,14 +86,12 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
-  \item \textbf{Random Town:} On next Resource Round, you may recruit one random Neutral \silver\ Unit by paying its full \svg{pay_v2} cost.
-  \item \textbf{Grail Field:} Gain the Grail Token.
-  \item If you start a turn with the Grail Token, gain \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item \textbf{Random Town:} On next Resource Round, you may recruit one \silver\ Unit from that Faction by paying its full recruitment cost.
+  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income.
-  \item Level VII Neutral Combats cannot be skipped and grant the player \svg{morale_positive}.
-  \item Players do not have to pay \svg{gold} after losing a Combat against another player.
-  \item A defeated Main Hero may Empower one Statistic Card from their hand or Discard Pile \textit{and} gain \svg{morale_positive}.
+  \item Level VII Neutral Combats cannot be skipped.
+  \item A defeated Main Hero may Empower one Statistic Card from their deck of M\&M.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
   \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
 \end{itemize}
