--- a/draft-scenarios/clash/mines_of_moria.tex
+++ b/draft-scenarios/clash/mines_of_moria.tex
@@ -47,7 +47,7 @@ When a player captures their \nth{7} mine all players -- including that player -
 \end{itemize}
 \textbf{\nth{3} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes from all map locations except Learning Stones.
+  \item Remove all Black Cubes from the Map except Learning Stones.
 \end{itemize}
 \textbf{\nth{5} Round:}
 \begin{itemize}
