--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -81,14 +81,14 @@ If no player has achieved an immediate victory, the player with the most Victory
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
+  \item \textbf{Sanctuary:} Search (3) your Deck. \textit{Visitable once per Faction}.
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be flagged by multiple players.}
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
   \item An \textbf{Astral Gate} cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to another random activated Astral Gate on the Map and arrive on an adjacent Field.
   \item Instead of teleporting randomly, a player may discard 1 Unit to choose the destination Astral Gate.
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
-  \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
+  \item \textbf{Level VII Settlement:} ``When you Flag a Settlement'' 3 times.
   \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for its recruitment cost.
   \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
 \end{itemize}
