--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -89,8 +89,8 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
   \item \textbf{Level VII Settlement:} Resolve ``When you Flag a Settlement'' 3 times.
-  \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for its recruitment cost.
-  \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
+  \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for half its recruitment cost.
+  \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half its recruitment cost.
 \end{itemize}
 
 \end{multicols}
