--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -8,7 +8,7 @@
 \textit{Every move could be your last. Every gate a gamble. Glory belongs to the bold.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 14 Rounds.
+This Scenario plays out over 15 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 6
@@ -34,18 +34,18 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Far (II-III) Map Tiles
-  \item P × Near (IV-V) Map Tile
+  \item P × Near (IV-V) Map Tiles
   \item 6 × Near (IV-V) Map Tiles with Obelisk
   \item 1 × Center (VI-VII) Map Tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends at the end of the Round when any of the following conditions are met:
+The game ends when any of the following conditions are met:
 
 \begin{itemize}
   \item One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
   \item One player has flagged all Obelisks. \textit{That player wins the game immediately.}
-  \item At the end of Round 14.
+  \item At the end of Round 15.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
@@ -72,7 +72,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \end{itemize}
 \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item The player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
+  \item Player(s) whose Main Hero has the least \svg{experience}, gain 2 \svg{resource}.
 \end{itemize}
 \textbf{\nth{12} Round:}
 \begin{itemize}
@@ -81,20 +81,43 @@ If no player has achieved an immediate victory, the player with the most Victory
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
+  \item Blocked Field on the Map Tile in the center does not count as blocked.
   \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be flagged by multiple players.}
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
   \item An \textbf{Astral Gate} cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to another random activated Astral Gate on the Map and arrive on an adjacent Field.
   \item Instead of teleporting randomly, a player may discard 1 Unit to choose the destination Astral Gate.
+\end{itemize}
+  
+  \begin{center}
+  \vspace*{\fill}
+  \vspace*{\fill}
+  \includegraphics[width=1.1\linewidth]{\maps/astral_run.png}
+  \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
+  \vspace*{\fill}
+  \end{center}
+
+\begin{itemize}
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
   \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
   \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for its recruitment cost.
   \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
+  \item \textbf{11 Round game:} Remove P × (IV-V) Map Tiles and replace the (VI-VII) Tile with a (IV-V) Map Tile.
 \end{itemize}
 
-\end{multicols}
+%\end{multicols}
 
-\begin{tikzpicture}[overlay, remember picture]
-  \node[yshift=-12em] at (current page.center) {\includegraphics[width=0.84\linewidth]{\maps/astral_run.png}};
-\end{tikzpicture}
+%\begin{tikzpicture}[overlay, remember picture]
+%  \node[yshift=-12em] at (current page.center) {\includegraphics[width=0.84\linewidth]{\maps/%astral_run.png}};
+%\end{tikzpicture}
+
+\begin{center}
+  \vspace*{\fill}
+  \vspace*{\fill}
+  \includegraphics[width=1.1\linewidth]{\maps/astral_run_short.png}
+  \captionof{figure}{\textbf{SHORT GAME MAP LAYOUT}}
+  \vspace*{\fill}
+\end{center}
+
+\end{multicols}\\
