rule changes, some wording fixes still needed for 'closest starting player'

--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash/Alliance Scenario}{The Shattered Alliance}{\images/implosion.png}
+\addscenariosection{1}{Clash/Alliance Scenario}{Shattered Alliance}{\images/implosion.png}
 
 \begin{multicols*}{2}
 
@@ -20,7 +20,8 @@ This Scenario plays out over 14 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Few cheapest \svg{bronze} Units
+  \item 1 × Pack cheapest \bronze\ Units
+  \item 1 × Chosen Neutral \bronze\ Unit from the Faction of the closest player
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -39,23 +40,21 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends when one player has defeated each other players' Main Hero once \textit{or} at the end of Round 14.
+The game ends when one player has defeated each other player's Main Hero once \textit{or} at the end of Round 14.
 
 \subsection*{\MakeUppercase{Victory Points}}
 The player with the most Victory Points (VP) wins (see Tournament Book). Players gain:
 
 \begin{itemize}
-  \item 2 VP for winning a Level VII Neutral Combat
-  \item 1 VP for losing a Combat against another player
-  \item 1 VP for the Grail Token
+  \item 3 VPs for defeating another player's Main Hero
+  \item +2 VPs for defeating the closest starting player's Main Hero
+  \item 2 VPs for the Grail Token
+  \item 2 VPs for winning a Level VII Neutral Combat
+  \item 1 VP for losing a Combat against another player's Main Hero
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{\nth{1} Round:}
-\begin{itemize}
-  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
-\end{itemize}
 \textbf{End of \nth{2} Round:}
 \begin{itemize}
   \item Each player may resolve all the Fields that the player closest to them visited this Round.
@@ -82,7 +81,9 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
+
 \begin{itemize}
+  \item When a Hero moves to a Starting Town, that Hero gains +1 \svgeven{movement}.
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
