--- a/translations/title_page.tex/fr.po
+++ b/translations/title_page.tex/fr.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-03-26 09:51+0000\n"
-"PO-Revision-Date: 2024-11-01 11:08+0000\n"
-"Last-Translator: Anonymous <noreply@weblate.org>\n"
+"PO-Revision-Date: 2025-05-15 08:02+0000\n"
+"Last-Translator: SkullsuiT <jfdswhaos@gmail.com>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/sections/scenarios/fr/>\n"
 "Language: fr\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.8.2-dev\n"
+"X-Generator: Weblate 5.12-dev\n"
 
 #.  !TeX spellcheck = en_US
 #. type: tikzpicture
@@ -52,6 +52,7 @@ msgstr ""
 #.  Render phantom SVGs before their use in tabular env
 #. type: Plain text
 #: sections/title_page.tex:30
+#, fuzzy
 msgid ""
 "\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
 "\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
@@ -62,3 +63,11 @@ msgid ""
 "{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
 "svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
 msgstr ""
+"\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
+"\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
+"{\\svgs/silver.svg} \\includesvg[height=0.1px]{\\svgs/golden.svg} "
+"\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
+"{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
+"\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
+"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
